# conf-py

./: README.md  pyproject.toml
.githook/: pre-commit  pre-push
.github/workflows/: check.yml  publish.yml
conf-py/: conf.py
conf_py/: conf_test.py
confng/: __init__.py
src/: __init__.py  main.py
